angular/projects/design/src/styles/_forms.scss
form {
  h4 {
    color: $brand-primary-500;
    span {
      color: $base-500;
    }
    border-bottom: 2px solid $base-300;
    margin: 1rem 0;
  }

  hr {
    border-top: 2px solid $base-300;
    opacity: 1;
  }
}

.select-wrapper {
  position: relative;
  height: 2.75rem;
  flex: 1;
}

.select-wrapper__select {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.form-field {
  background-color: white;
  border: 2px solid $base-500;
  border-radius: 0.5rem;
  display: flex;
  flex-direction: column;
  position: relative;

  input:not([type='checkbox']),
  select,
  textarea {
    @include h3-semibold;
    background-color: white;
    border: 0;
    color: $base-800;
    flex-grow: 1;
    margin: 0.375rem 0.875rem;
    padding: 0;
    &::placeholder,
    &:disabled {
      color: $base-300;
    }
    &:focus {
      outline: none;
    }
  }

  label:not(.form-check-label) {
    @include h4-semibold;
    margin: 0.375rem 0.875rem 0;
    color: $base-500;
    display: flex;
    justify-content: space-between;
    align-items: baseline;

    & + input,
    & + select,
    & + textarea {
      margin-top: 0;
    }
  }

  select {
    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 9L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929L19 9' stroke='%232F4A56' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
    background-repeat: no-repeat;
    background-position: right center;
    appearance: none;
    padding-right: 2rem;
  }
}

.form-field__content {
  padding: 0.375rem 0.875rem;
}

.form-field--nonempty {
  border-color: $brand-primary-300;
}

.form-field--search {
  &::after {
    display: block;
    position: absolute;
    bottom: 0.125rem;
    right: 0.5rem;
    background: transparent
      url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10 17C13.866 17 17 13.866 17 10C17 6.13401 13.866 3 10 3C6.13401 3 3 6.13401 3 10C3 13.866 6.13401 17 10 17Z' stroke='%232F4A56' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M21 21L15 15' stroke='%232F4A56' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A")
      no-repeat center center/1.5rem 1.5rem;
    content: '';
    height: 2.25rem;
    width: 2.25rem;
  }

  ngb-typeahead-window {
    background-color: white;
    border: 2px solid $brand-primary-500;
    border-radius: 0.5rem;
    display: flex;
    flex-direction: column;
    margin: 1rem 0.75rem 1rem -1rem;
    padding: 0.375rem;
    right: 0;
    z-index: 1000;

    .dropdown-item {
      @include h4-semibold;
      background: none;
      border: none;
      border-radius: 0.5rem;
      color: $base-500;
      padding: 0.75rem 0.5rem;
      text-align: left;

      &.active {
        background-color: $base-100;
        color: $base-800;
      }
    }
  }
}

:not(.form-field--noclear).form-field--editing.form-field--nonempty {
  &::after {
    display: block;
    position: absolute;
    bottom: 0.125rem;
    right: 0.5rem;
    background: transparent
      url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L5.29289 17.2929ZM18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L18.7071 6.70711ZM6.70711 18.7071L18.7071 6.70711L17.2929 5.29289L5.29289 17.2929L6.70711 18.7071Z' fill='%232F4A56'/%3E%3Cpath d='M6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L6.70711 5.29289ZM17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L17.2929 18.7071ZM5.29289 6.70711L17.2929 18.7071L18.7071 17.2929L6.70711 5.29289L5.29289 6.70711Z' fill='%232F4A56'/%3E%3C/svg%3E%0A")
      no-repeat center center/1.5rem 1.5rem;
    content: '';
    cursor: pointer;
    height: 2.25rem;
    width: 2.25rem;
  }
}

.form-field--disabled,
fieldset[disabled] .form-field {
  border-color: $base-300;
  &::after {
    display: none !important;
  }
}

select:disabled {
  background-image: none;
}

.form-field--focused {
  border-color: $brand-primary-500;
  box-shadow: 0 0 0 4px $brand-primary-200;

  label:not(.form-check-label) {
    color: $brand-primary-500;
  }
}

.form-field--invalid {
  border-color: $brand-secondary-500;
  &.form-field--focused {
    box-shadow: 0 0 0 4px $brand-secondary-400;
  }

  label:not(.form-check-label) {
    color: $brand-secondary-500;
  }
}

.form-field--plaintext {
  border: none;
  input,
  textarea {
    margin: 0.5rem 1rem;
  }

  label {
    margin: 0.5rem 1rem 0;
  }
}

.feedback,
.valid-feedback,
.invalid-feedback {
  @include body14-bold;
}

.feedback {
  color: $base-500;
}

.invalid-feedback {
  color: $brand-secondary-500;
}

.valid-feedback {
  color: $brand-primary-500;
}

.form-field + .feedback,
.form-field + .invalid-feedback,
.form-field + .valid-feedback {
  margin: 0.25rem 1rem 0;
}

.form-field .feedback,
.form-field .invalid-feedback,
.form-field .valid-feedback {
  margin: 0 0.875rem 0.25rem;
}

.form-check {
  @include h4-semibold;
  margin-top: 0.375rem;
}

.form-check-input {
  background-size: auto;
  margin-top: 0;
}

.form-check-label {
  padding-top: 0.375rem;
}

.form-check--editing {
  .form-check-input,
  .form-check-label {
    cursor: pointer;
  }
}

.form-field-group {
  display: flex;

  & > .form-field,
  shared-text-field,
  shared-select-field,
  shared-file-field {
    flex-grow: 1;
  }
  & > .form-field,
  & > .btn {
    &:not(:first-child) {
      align-self: stretch;
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
    }
  }
  shared-text-field,
  shared-select-field,
  shared-file-field {
    &:not(:first-child) {
      .form-field {
        align-self: stretch;
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
      }
    }
  }
  & > .form-field,
  & > .btn {
    &:not(:last-child) {
      align-self: stretch;
      border-right: none;
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
    }
  }
  shared-text-field,
  shared-select-field,
  shared-file-field {
    &:not(:last-child) {
      .form-field {
        align-self: stretch;
        border-right: none;
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
      }
    }
  }
}

.form-group {
  border-left: 2px solid $base-300;
  padding-left: 0.875rem;
}

.array-field__item {
  @include h3-semibold;

  position: relative;
  padding: 0.375rem 0.875rem;
  color: $base-800;

  & + .array-field__item {
    border-top: 2px solid $brand-primary-300;
  }

  h5 {
    color: $brand-primary-500;
    margin-bottom: 0;
  }

  span {
    color: $base-500;
  }

  .input-group {
    align-items: center;
    & > input:first-child {
      margin-left: 0;
    }
    & > .select-wrapper:first-child select {
      margin-left: 0;
      padding-left: 0;
    }
    & > .input-group-append:last-child {
      margin-right: 0;
    }
  }

  .invalid-feedback {
    margin-left: 0;
    span {
      color: $brand-secondary-500;
    }
  }
}

.form-field--editing {
  .array-field__item {
    cursor: grab;
    &.sortable-chosen {
      cursor: grabbing;
    }
  }
}

label + .array-field__item,
.feedback + .array-field__item {
  border-top: 2px solid $brand-primary-300;
  margin-top: 0.375rem;
}

.array-field__item + .form-field__content {
  border-top: 2px solid $brand-primary-300;
}

.array-field:not(.array-field--noclear) .array-field__item {
  padding-right: 3.25rem;
  &::after {
    display: block;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 0.5rem;
    background: transparent
      url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L5.29289 17.2929ZM18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L18.7071 6.70711ZM6.70711 18.7071L18.7071 6.70711L17.2929 5.29289L5.29289 17.2929L6.70711 18.7071Z' fill='%232F4A56'/%3E%3Cpath d='M6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L6.70711 5.29289ZM17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L17.2929 18.7071ZM5.29289 6.70711L17.2929 18.7071L18.7071 17.2929L6.70711 5.29289L5.29289 6.70711Z' fill='%232F4A56'/%3E%3C/svg%3E%0A")
      no-repeat center center/1.5rem 1.5rem;
    content: '';
    cursor: pointer;
    height: 2.25rem;
    width: 2.25rem;
  }
}

.array-field__item + .array-field__item.array-field__item--invalid,
.array-field__item.array-field__item--invalid + .form-field__content,
.array-field__item.array-field__item--invalid + .array-field__item {
  border-top-color: $brand-secondary-500;
}

.array-field__item--invalid {
  .select-wrapper__select {
    color: $brand-secondary-500;
  }
}

.array-field__subitem {
  border-top: 2px dotted $base-300;
  margin: 0.375rem 0 0;
  padding: 0.375rem 0 0;
  &:first-child {
    border-top: 0;
    margin: 0;
    padding: 0;
  }
}

.form-field + .array-field__form {
  margin-top: 0.5rem;
}

.recording-field {
  padding: 0.5rem;
}

.recording-field__header {
  display: flex;
}

.recording-field__playpause {
  background-color: transparent;
  border: 0;
  color: $brand-primary-500;
  height: 2.5rem;
  padding: 0;
  width: 2.5rem;
  &:hover {
    color: $brand-primary-600;
  }
  &:active {
    color: $brand-primary-700;
  }
}

.recording-field__metadata {
  flex-grow: 1;
  margin: 0 0.5rem;
}

.recording-field__title,
.recording-field__duration {
  @include body14;
}

.recording-field__title {
  color: $base-500;
}

.recording-field__duration {
  color: $base-800;
}

.recording-field__timestamp {
  background-color: $base-300;
  border-color: $base-300;
  color: $base-800;
  opacity: 1;
  pointer-events: none;
  .pr-icon {
    font-size: 1rem;
    color: $base-500;
  }
}

.recording-field__body {
  @include h3-semibold;
  margin: 0.5rem 0 0.5rem 3rem;
}

